Bug 107931 - FILEOPEN: DOC: character properties of autokern don't override default style
Summary: FILEOPEN: DOC: character properties of autokern don't override default style
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:5.5.0
Keywords: filter:doc
Depends on:
Blocks:
 
Reported: 2017-05-18 10:33 UTC by Justin L
Modified: 2017-05-19 11:44 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2017-05-18 10:33:19 UTC
If a .doc file has autokern enabled as a default style (via default document properties, or via style setting), then ALL of the text is kerned, regardless of whether other styles or direct character formatting turn kerning off.

Round-trip as .doc using the .docx attachments attachment 133347 [details] (KERN_DocDefault.docx) and attachment 133349 [details] (KERN_enabledDefStyle.docx) from bug 107801, and notice that every line is auto-kerned - even the lines where direct character formatting should have turned it off.

Note1 - this can only be tested in LO5.4 after commit ded07624096183ed310187f29d4692bb39b7d24a [tdf#105454: Stop ignoring font kerning setting]. Before that, kerning was ALWAYS applied. Use attachment 133346 [details] to see kerning working properly (in this case, the default style is off).
Note2 - this only affects .doc, not .docx.
Comment 1 Xisco Faulí 2017-05-18 10:47:49 UTC
Confirmed in

Version: 5.4.0.0.alpha1+
Build ID: 74d2e606fd3605fe0a585f596eaa215ae4e20d18
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk3; 
Locale: fo-FO (ca_ES.UTF-8); Calc: group
Comment 2 Julien Nabet 2017-05-18 14:49:06 UTC
Justin: since you assigned yourself, let's put the tracker to ASSIGNED :-)
Comment 3 Commit Notification 2017-05-19 07:18:54 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8a01fc2f505acc6ed9af5ba18049131225baad30

tdf#107931 ww8import: kern marker MAY indicate disabled kerning.

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.