tdf#107931 ww8import: kern marker MAY indicate disabled kerning.

The simple presence of a FontKern SPRM was assumed to mean
that kerning was enabled instead of reading the value
passed by the parameter. However, if the style's default
is to enable kerning, then SPRMs must indicate zero
in order to disable it in non-default formatting.

This commit will be food for reporting false regressions.
Just because text no longer fits in the space that it used
to doesn’t make this a regression. Don’t blame this commit
UNLESS the character or style’s “Position” “Pair Kerning”
setting is incorrect. In MSWord this is a “Font” “Advanced”
Kerning setting. This kern bug will have hidden lots of other
spacing related problems that are unrelated to this commit.

Related to tdf#105454 which did something similar for .docx.

Change-Id: Ie27b5a342ffc1431e1c5ee0a7b057fdb11e4e4e3
Reviewed-on: https://gerrit.libreoffice.org/37781
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Justin Luth <justin_luth@sil.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>